# logging-strict

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.rst  Makefile  NOTICE.txt  README.rst  academics-mistakenly-assumed-authoritative.rst  howto.txt  igor.py  pyproject.toml  run_black.py  setup.cfg  stubtest_allowlist.txt  tox-req.ini  tox-test.ini  tox.ini
.github/workflows/: codeql-analysis.yml  dependency-review.yml  kit.yml  python-nightly.yml  quality.yml  release.yml  test-coverage.yml  testsuite.yml
ci/: download_gha_artifacts.py
docs/: Makefile  _toc.yml  conf.py  index.rst  objects-black.inv  objects-coverage-docs.inv  objects-coverage-source.inv  objects-coverage.inv  objects-logging-strict.inv  objects-logging-strict.txt  objects-setuptools-scm.inv  objects-strictyaml-docs.inv  objects-strictyaml-source.inv  objects-strictyaml.inv  objects-textual-docs.inv  objects-textual.inv  requirements.in  requirements.pip  threat-model.rst
docs/api/locals/: get_locals_dynamic.rst  scope_b_locals.rst
docs/api/logging/: api_logging_asynchronous.rst  api_logging_handlers.rst  api_logging_synchronous.rst  api_logging_warnings.rst  index.rst
docs/code/constants/: constants_general.rst
docs/code/tech_niques/: coverage_misbehaves.rst  index.rst  logging_capture.rst
docs/code/util/: check_type.rst  index.rst  package_resource.rst  util_root.rst  xdg_folder.rst
docs/code/yaml/: logging_api.rst  logging_yaml_abc.rst  logging_yaml_validate.rst
docs/contributing/: index.rst  testing.rst
docs/getting_started/: exporting.rst  usage.rst  validation.rst
requirements/: dev.in  dev.pip  dev.unlock  kit.in  kit.unlock  manage.in  manage.pip  manage.unlock  mypy.in  mypy.unlock  pins.in  pins.pip  pip-tools.in  pip-tools.unlock  pip.in  pip.unlock  prod.in  tox.in  tox.pip  tox.unlock
src/logging_strict/: __init__.py  __init__.pyi  constants.py  constants.pyi  ep_validate_yaml.py  exceptions.py  exceptions.pyi  logging_api.py  logging_api.pyi  logging_api_test.py  logging_yaml_abc.py  logging_yaml_abc.pyi  logging_yaml_validate.py  register_config.py  register_config.pyi  version_semantic.py  version_semantic.pyi
src/logging_strict/tech_niques/: __init__.py  __init__.pyi  context_locals.py  context_locals.pyi  coverage_misbehaves.py  coverage_misbehaves.pyi  logger_redirect.py  logging_capture.py  logging_capture.pyi  stream_capture.py  stream_capture.pyi
src/logging_strict/util/: check_logging.py  check_logging.pyi  check_type.py  check_type.pyi  package_resource.py  package_resource.pyi  pep518_read.py  pep518_read.pyi  util_root.py  util_root.pyi  xdg_folder.py  xdg_folder.pyi
tests/: test_abc.py  test_check_logging.py  test_check_type.py  test_ep.py  test_logging_api.py  test_pep518_read.py  test_registry_config.py  test_util_package_resource.py  test_util_root.py  test_validate.py  test_versioning.py  test_xdg_folders.py
tests/tech_niques/: test_context_locals.py  test_docs_logging_capture.py  test_docs_stream_capture.py  test_docs_sync_log_capture.py  test_logging_capture.py  test_uncategorized_underappreciated.py
