[metadata]
platform = linux
license_files =
    LICENSE.txt
    NOTICE.txt

[bdist_wheel]
universal = True

[sdist]
formats = gztar

# https://github.com/abravalheri/experiment-setuptools-package-data
# [options.package_data]
# * = configs/*.app.logging.config.yaml, configs/*.worker.logging.config.yaml
